--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
 		"*": "prettier --ignore-unknown --write"
 	},
 	"dependencies": {
+		"clsx": "^1.2.1",
 		"next": "^13.4.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"tidelift-me-up": "^0.1.6"
+		"tidelift-me-up": "^0.1.7"
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.37.0",
