--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"name": "Josh Goldberg",
 		"email": "npm@joshuakgoldberg.com"
 	},
-	"main": "./lib/index.js",
 	"files": [
 		"bin/",
 		"lib/",
@@ -59,9 +58,9 @@
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-jsdoc": "^46.0.0",
 		"eslint-plugin-jsonc": "^2.8.0",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-markdown": "^3.0.0",
 		"eslint-plugin-n": "^16.0.0",
-		"eslint-plugin-next": "^0.0.0",
 		"eslint-plugin-perfectionist": "^1.4.0",
 		"eslint-plugin-regexp": "^1.15.0",
 		"eslint-plugin-yml": "^1.7.0",
