--- a/knip.jsonc
+++ b/knip.jsonc
@@ -1,11 +1,11 @@
 {
 	"$schema": "https://unpkg.com/knip@next/schema.json",
-	"entry": ["src/index.ts!", "script/*e2e.js"],
+	"entry": ["src/app/**/*.tsx!"],
 	"ignoreBinaries": ["dedupe", "gh"],
 	"ignoreDependencies": ["all-contributors-cli", "c8"],
 	"ignoreExportsUsedInFile": {
 		"interface": true,
 		"type": true
 	},
-	"project": "src/**/*.ts!"
+	"project": ["src/**/*.ts!", "src/**/*.tsx!"]
 }
