--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"tidelift-me-up": "^0.1.7"
 	},
 	"devDependencies": {
+		"@next/eslint-plugin-next": "^13.4.7",
 		"@types/eslint": "^8.37.0",
 		"@types/node": "20.3.1",
 		"@types/react": "^18.2.14",
