--- a/package.json
+++ b/package.json
@@ -1,32 +1,24 @@
 {
 	"name": "tidelift-me-up-site",
 	"version": "0.0.0",
-	"description": "Find your npm packages eligible for Tidelift funding. 💸",
+	"description": "Web app to find your npm packages eligible for Tidelift funding. 💸",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/JoshuaKGoldberg/tidelift-me-up-site"
 	},
 	"license": "MIT",
 	"author": {
-		"name": "Josh Goldberg",
+		"name": "JoshuaKGoldberg",
 		"email": "npm@joshuakgoldberg.com"
 	},
-	"files": [
-		"bin/",
-		"lib/",
-		"package.json",
-		"LICENSE.md",
-		"README.md"
-	],
 	"scripts": {
 		"build": "next build",
 		"dev": "next dev",
 		"format": "prettier \"**/*\" --ignore-unknown",
-		"format:write": "pnpm format --write",
 		"lint": "next lint --max-warnings 0 --report-unused-disable-directives error",
 		"lint:knip": "knip",
 		"lint:md": "markdownlint \"**/*.md\" \".github/**/*.md\" --rules sentences-per-line",
-		"lint:package": "npmPkgJsonLint .",
+		"lint:package-json": "npmPkgJsonLint .",
 		"lint:packages": "pnpm dedupe --check",
 		"lint:spelling": "cspell \"**\" \".github/**/*\"",
 		"prepare": "husky install",
@@ -45,39 +37,38 @@
 	},
 	"devDependencies": {
 		"@next/eslint-plugin-next": "^14.0.0",
-		"@types/eslint": "^8.37.0",
+		"@types/eslint": "^8.44.7",
 		"@types/node": "20.9.0",
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@typescript-eslint/parser": "^6.10.0",
 		"cspell": "^8.0.0",
-		"eslint": "^8.40.0",
-		"eslint-config-prettier": "^9.0.0",
+		"eslint": "^8.53.0",
 		"eslint-plugin-deprecation": "^2.0.0",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-jsdoc": "^46.0.0",
-		"eslint-plugin-jsonc": "^2.8.0",
+		"eslint-plugin-jsdoc": "^46.9.0",
+		"eslint-plugin-jsonc": "^2.10.0",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-markdown": "^3.0.0",
-		"eslint-plugin-n": "^16.0.0",
-		"eslint-plugin-perfectionist": "^2.0.0",
-		"eslint-plugin-regexp": "^2.0.0",
-		"eslint-plugin-yml": "^1.7.0",
+		"eslint-plugin-markdown": "^3.0.1",
+		"eslint-plugin-n": "^16.3.1",
+		"eslint-plugin-no-only-tests": "^3.1.0",
+		"eslint-plugin-perfectionist": "^2.3.0",
+		"eslint-plugin-regexp": "^2.1.1",
+		"eslint-plugin-yml": "^1.10.0",
 		"husky": "^8.0.3",
-		"jsonc-eslint-parser": "^2.3.0",
-		"knip": "2.40.1",
-		"lint-staged": "^15.0.0",
-		"markdownlint": "^0.31.0",
+		"jsonc-eslint-parser": "^2.4.0",
+		"knip": "2.41.0",
+		"lint-staged": "^15.1.0",
+		"markdownlint": "^0.31.1",
 		"markdownlint-cli": "^0.37.0",
-		"npm-package-json-lint": "^7.0.0",
+		"npm-package-json-lint": "^7.1.0",
 		"npm-package-json-lint-config-default": "^6.0.0",
-		"prettier": "^3.0.0",
-		"prettier-plugin-curly": "^0.1.0",
-		"prettier-plugin-packagejson": "^2.4.3",
+		"prettier": "^3.0.3",
+		"prettier-plugin-curly": "^0.1.3",
+		"prettier-plugin-packagejson": "^2.4.6",
 		"sentences-per-line": "^0.2.1",
-		"typescript": "^5.0.4",
+		"typescript": "^5.2.2",
 		"yaml-eslint-parser": "^1.2.2"
 	},
 	"packageManager": "pnpm@8.10.2",
