--- a/.github/workflows/lint-package-json.yml
+++ b/.github/workflows/lint-package-json.yml
@@ -1,12 +1,12 @@
 jobs:
-  lint_package:
+  lint_package_json:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/prepare
-      - run: pnpm lint:package
+      - run: pnpm lint:package-json
 
-name: Lint Package
+name: Lint Package JSON
 
 on:
   pull_request: ~
