--- a/.github/workflows/tsc.yml
+++ b/.github/workflows/tsc.yml
@@ -1,12 +1,12 @@
 jobs:
-  build:
+  type_check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/prepare
       - run: pnpm tsc
 
-name: Build
+name: Type Check
 
 on:
   pull_request: ~
