--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"lib": ["DOM", "DOM.Iterable", "ESNext"],
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
+		"module": "ESNext",
+		"moduleResolution": "Bundler",
 		"noEmit": true,
 		"paths": {
 			"~/*": ["./src/*"]
