--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
 		"incremental": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"module": "esnext",
-		"moduleResolution": "node",
+		"lib": ["DOM", "DOM.Iterable", "ESNext"],
+		"module": "ESNext",
+		"moduleResolution": "Bundler",
 		"noEmit": true,
 		"paths": {
 			"~/*": ["./src/*"]
